Don't pause game when window is switched out (Fixes #20)